--- a/todo/templates/add_todo.html
+++ b/todo/templates/add_todo.html
@@ -13,15 +13,7 @@
 
     {% csrf_token %}
 
-    <label for="name">Name</label>
-    <input type="text" id="name" name="name">
-    <br>
-    <br>
-    <label for="done">Done</label>
-    <input type="checkbox" id="done" name="done">
-
-    <br>
-    <br>
+    {{ form.as_p }}
 
     <button type="submit">Add todo</button>
     
