--- a/todo/templates/todo_list.html
+++ b/todo/templates/todo_list.html
@@ -9,17 +9,25 @@
 <body>
     <h1>things i need to do</h1>
     {% for item in items %}
+
+    <tr>
         {% if item.done %}
 
-        <p> - <strike>{{item.name}} </strike> </p>
+        <td> - <strike>{{item.name}} </strike> -- </td>
         {% else %}
-        <p> {{item.name}} </p>
+        <td> {{item.name}}</td>
         {% endif %}
+        <td>
+        <form method="GET" action="edit/{{item.id}}">
+            <input type="submit" value="Edit">
+        </form>
+        </td>
+    </tr>
     {% empty %}
 
         <p>No Data available</p>
     {% endfor %}
-
+<br>
     <a href="add">Add a todo</a>
 </body>
 </html>
