--- a/todo/templates/add_todo.html
+++ b/todo/templates/add_todo.html
@@ -7,7 +7,7 @@
     <title>Add data</title>
 </head>
 <body>
-    <h1>Adding data here</h1>
+    <h1>Adding data here to view</h1>
 
     <form action="" method="POST">
 
